--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Mon May 29 23:02:07 MSK 2017
+#Wed May 31 10:53:24 MSK 2017
 javarush.query.filter=
-javarush.quest.filter=ALL_QUESTS
+javarush.quest.filter=QUEST_JAVA_CORE
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task17.task1722
+javarush.last.task.key=com.javarush.task.task18.task1826
 javarush.user.secretkey=a63a8518-ff91-4f92-81ba-0ac310935288
-javarush.last.task.path=D\:/JavaRushTasks/2.JavaCore/src/com/javarush/task/task17/task1722
-javarush.level.filter=ALL
+javarush.last.task.path=D\:/JavaRushTasks/2.JavaCore/src/com/javarush/task/task18/task1826
+javarush.level.filter=EIGHT
